--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "daisyui": "^5.0.43",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
